Add watchers filter on get_repositories.
